fix(接口测试): 批量执行同一接口定义下的多个用例报错